# osg-intersectors-example

./: .gitignore  .travis.yml  CMakeLists.txt  DraggableWire.cpp  DraggableWire.h  EventHandler.cpp  EventHandler.h  LineIntersector.cpp  LineIntersector.h  PointIntersector.cpp  PointIntersector.h  README.md  SVMData.cpp  SVMData.h  VirtualPlaneIntersector.cpp  VirtualPlaneIntersector.h  main.cpp
